# Saturn2D

./: .gitignore  .gitmodules  CMakeLists.txt
Application/: CMakeLists.txt
Application/Source/: Main.cpp  Precompiled.hpp
Application/source/: Main.cpp
Application/src/: Main.cpp  MyApplication.cpp  MyApplication.hpp  Precompiled.hpp
Framework/: CMakeLists.txt
Framework/Include/Core/: Framework.hpp  Types.hpp
Framework/Include/Core/Event/: Event.hpp  EventSystem.hpp  EventType.hpp
Framework/Include/Core/Event/Window/: FramebufferResizeEvent.hpp  WindowCloseEvent.hpp  WindowContentScaleChangeEvent.hpp  WindowEvent.hpp  WindowFocusEvent.hpp  WindowIconifyEvent.hpp  WindowMaximizeEvent.hpp  WindowMoveEvent.hpp  WindowRefreshEvent.hpp  WindowResizeEvent.hpp
Framework/Include/Core/Graphics/: GraphicsAPI.hpp  GraphicsContext.hpp
Framework/Include/Core/Graphics/Resource/: AbstractResourceFactory.hpp  GraphicsBuffer.hpp  GraphicsResourceHandle.hpp  GraphicsResourceId.hpp  IBindableResource.hpp  ResourceManager.hpp  VertexBuffer.hpp
Framework/Include/Core/Graphics/Resource/OpenGL/: OpenGLResourceFactory.hpp  OpenGLVertexBuffer.hpp
Framework/Include/Core/Logging/: Log.hpp
Framework/Include/Core/Platform/GLFW/: GLFWContext.hpp
Framework/Include/Core/Types/: Object.hpp
Framework/Include/Core/Window/: IWindow.hpp  IWindowFactory.hpp  NativeWindowHandle.hpp  WindowProperties.hpp
Framework/Include/Core/Window/GLFW/: GLFWWindow.hpp  GLFWWindowFactory.hpp  ScopedContext.hpp  ScopedOpenGLContext.hpp
Framework/Include/Core/Window/GLFW/WindowProps/: ClientAPI.hpp  ContextCreationAPI.hpp  ContextReleaseBehavior.hpp  ContextRobustness.hpp  GLFWWindowProperties.hpp  OpenGLProfile.hpp
Framework/Include/Core/Window/Management/: WindowManager.hpp
Framework/Source/: Precompiled.hpp
Framework/Source/Core/: Framework.cpp
Framework/Source/Core/Event/: Event.cpp  EventSystem.cpp
Framework/Source/Core/Graphics/: GraphicsContext.cpp
Framework/Source/Core/Graphics/Resource/: GraphicsBuffer.cpp  GraphicsResourceId.cpp  ResourceManager.cpp  VertexBuffer.cpp
Framework/Source/Core/Graphics/Resource/OpenGL/: OpenGLResourceFactory.cpp
Framework/Source/Core/Logging/: Log.cpp
Framework/Source/Core/Platform/GLFW/: GLFWContext.cpp
Framework/Source/Core/Window/GLFW/: GLFWWindow.cpp  GLFWWindowFactory.cpp
Framework/Source/Core/Window/Management/: WindowManager.cpp
Framework/inc/Core/Application/: Application.hpp
Framework/inc/Core/Common/: Types.hpp
Framework/inc/Core/Diagnostics/: Log.hpp
Framework/inc/Core/Window/: IWindow.hpp  IWindowFactory.hpp  WindowHandle.hpp
Framework/inc/Core/Window/Parameters/: WindowParameters.hpp
Framework/inc/Platform/Window/GLFW/: GLFWWindow.hpp  GLFWWindowFactory.hpp
Framework/inc/Platform/Window/GLFW/Parameters/: ClientAPI.hpp  ContextCreationAPI.hpp  ContextReleaseBehavior.hpp  ContextRobustness.hpp  GLFWWindowParameters.hpp  OpenGLProfile.hpp
Framework/include/Core/: Framework.hpp
Framework/source/: pch.hpp
Framework/source/Core/: Framework.cpp
Framework/src/: Precompiled.hpp
Framework/src/Core/: Core.cpp
Framework/src/Core/Application/: Application.cpp
Framework/src/Core/Diagnostics/: Log.cpp
Framework/src/Core/Window/: WindowHandle.cpp
Framework/src/Platform/Window/GLFW/: GLFWWindowFactory.cpp
